# english-verb-trainer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: cd.yml  ci.yml
api/: main.py  schemas.py
app/: database.py  models.py  quiz.py  seed.py
static/: index.html
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_quiz.py
